{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 6,
  "lineage": "5deaca64-fedf-006e-ad74-a170d0aa37ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Jupiter_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:loadbalancer/app/jupiter-load-balancer/c14e75176507e8f1",
            "arn_suffix": "app/jupiter-load-balancer/c14e75176507e8f1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jupiter-load-balancer-1485087741.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:350358714376:loadbalancer/app/jupiter-load-balancer/c14e75176507e8f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jupiter-load-balancer",
            "security_groups": [
              "sg-0cc5396459fb195b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046dfce6952d67b3a"
              },
              {
                "subnet_id": "subnet-0a08481908c5ca0dd"
              }
            ],
            "subnets": [
              "subnet-046dfce6952d67b3a",
              "subnet-0a08481908c5ca0dd"
            ],
            "tags": {
              "Name": "jupiter-load-balancer"
            },
            "tags_all": {
              "Name": "jupiter-load-balancer"
            },
            "vpc_id": "vpc-0ae14fa34f12ef6c6",
            "zone_id": "Z1H1FL5HABSF5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:listener/app/jupiter-load-balancer/c14e75176507e8f1/43f311a8d3079f1b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:targetgroup/alb-tg-api/7dd31c618b1787ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:350358714376:listener/app/jupiter-load-balancer/c14e75176507e8f1/43f311a8d3079f1b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:loadbalancer/app/jupiter-load-balancer/c14e75176507e8f1",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Jupiter_loadbalancer",
            "aws_lb_target_group.this-api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "react",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:listener/app/jupiter-load-balancer/c14e75176507e8f1/443987d9bc19d0ae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:targetgroup/alb-tg-react/f0e043bee26239ae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:350358714376:listener/app/jupiter-load-balancer/c14e75176507e8f1/443987d9bc19d0ae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:loadbalancer/app/jupiter-load-balancer/c14e75176507e8f1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Jupiter_loadbalancer",
            "aws_lb_target_group.this-react"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:targetgroup/alb-tg-api/7dd31c618b1787ff",
            "arn_suffix": "targetgroup/alb-tg-api/7dd31c618b1787ff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:350358714376:targetgroup/alb-tg-api/7dd31c618b1787ff",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg-api",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ae14fa34f12ef6c6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this-react",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:350358714376:targetgroup/alb-tg-react/f0e043bee26239ae",
            "arn_suffix": "targetgroup/alb-tg-react/f0e043bee26239ae",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:350358714376:targetgroup/alb-tg-react/f0e043bee26239ae",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg-react",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ae14fa34f12ef6c6"
          }
        }
      ]
    }
  ]
}